# PythonProject2021

./: .flake8  Main_App.py  Pipfile  README.md  dodo.py  main.py  pyproject.toml  setup.cfg  test_check_win.py
Entertainment/: Entertainment.py  TagGame.py  Tic_tac_toe.py
PyProj/: .doit.db  main.py  skeleton.py  test.txt
PyProj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
PyProj/Application/: Applications.py  Polinoms.py
PyProj/Entertainment/: Graph.py  Tic_tac_toe.py  test_check_draw.py  test_check_possible_win.py
PyProj/To-Do/: To_Do.py  change_window.py
PyProj/Weather/: day.py
PyProj/locale/: messages.pot
PyProj/locale/ru/LC_MESSAGES/: messages.mo  messages.po
PyProj/source/: all_games.rst  apps.rst  conf.py  entertainment.rst  forecast.rst  games.rst  index.rst  mains.rst  mathapps.rst  test_check_win.rst  tests.rst  user.rst  weathers.rst
PyProj/tests/: test_check_draw.py  test_check_possible_win.py  test_check_win.py  test_sign.py  test_solve.py
PythonProj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
To-Do/: To_Do.py  change_window.py
Weather/: weather.py
locale/: messages.pot
locale/ru/LC_MESSAGES/: messages.mo  messages.po
source/: Tic_tac_toe.rst  conf.py  index.rst  maths.rst  modules.rst  weather.rst
