[metadata]
name = PythonProj
version = 0.1
author = TyapkinsLitSP
author_email = komrad.streln@yandex.ru
url = https://github.com/Tyapkins/PythonProject2021

[options]
packages = PyProj, Weather
include_packages_data = True
install_requires =
        PyProj
        pillow
        python3-pil.imagetk
        pybabel
        build
        tkcalendar
        requests
        wheel
        setuptools
        

[options.package_data]
PyProj = */*/*.py
