[metadata]
name = PyProj
version = 0.1
author = TyapkinsLitSP
author_email = komrad.streln@yandex.ru
url = https://github.com/Tyapkins/PythonProject2021

[options]
packages = PyProj

include_packages_data = True
install_requires =
        PyProj
        pillow
        python3-pil.imagetk
        pybabel
        build
        tkcalendar
        requests
        wheel
        setuptools

[options.package_data]
PyProj = */*/*/messages.mo, */*.py
